arm64: renesas: r8a7795 dtsi: Link CPG to RST using "renesas,modemr"
Add a link from the Clock Pulse Generator node to the Reset Controller
node, so the CPG can read the Mode Monitoring Register (MODEMR) to
obtain the mode pin values.

Signed-off-by: Geert Uytterhoeven <geert+renesas@glider.be>

--- a/arch/arm64/boot/dts/renesas/r8a7795.dtsi
+++ b/arch/arm64/boot/dts/renesas/r8a7795.dtsi
@@ -257,6 +257,7 @@
 				clock-output-names = "main", "pll0", "pll1",
 						     "pll2", "pll3", "pll4";
 				#power-domain-cells = <0>;
+				renesas,modemr = <&rst 0x60>;
 
 				/* Module Standby and Software Reset */
 				mssr: mssr@e6150130 {
