--- a/arch/arm64/boot/dts/renesas/r8a7795.dtsi
+++ b/arch/arm64/boot/dts/renesas/r8a7795.dtsi
@@ -488,6 +488,7 @@
 						<&mstp10_clks R8A7795_CLK_SCU_ALL>, <&mstp10_clks R8A7795_CLK_SCU_ALL>,
 						<&mstp10_clks R8A7795_CLK_SCU_ALL>, <&mstp10_clks R8A7795_CLK_SCU_ALL>,
 						<&mstp10_clks R8A7795_CLK_SCU_ALL>, <&mstp10_clks R8A7795_CLK_SCU_ALL>,
+						<&mstp10_clks R8A7795_CLK_SCU_ALL>, <&mstp10_clks R8A7795_CLK_SCU_ALL>,
 						<&mstp10_clks R8A7795_CLK_SCU_ALL>, <&mstp10_clks R8A7795_CLK_SCU_ALL>;
 					clock-indices = <
 						R8A7795_CLK_SSI_ALL
@@ -495,6 +496,7 @@
 						R8A7795_CLK_SSI4 R8A7795_CLK_SSI3 R8A7795_CLK_SSI2 R8A7795_CLK_SSI1 R8A7795_CLK_SSI0
 						R8A7795_CLK_SCU_ALL
 						R8A7795_CLK_SCU_DVC1 R8A7795_CLK_SCU_DVC0
+						R8A7795_CLK_SCU_CTU1_MIX1 R8A7795_CLK_SCU_CTU0_MIX0
 						R8A7795_CLK_SCU_SRC9 R8A7795_CLK_SCU_SRC8 R8A7795_CLK_SCU_SRC7 R8A7795_CLK_SCU_SRC6 R8A7795_CLK_SCU_SRC5
 						R8A7795_CLK_SCU_SRC4 R8A7795_CLK_SCU_SRC3 R8A7795_CLK_SCU_SRC2 R8A7795_CLK_SCU_SRC1 R8A7795_CLK_SCU_SRC0
 					>;
@@ -505,6 +507,8 @@
 						"ssi1", "ssi0",
 						"scu-all",
 						"scu-dvc1", "scu-dvc0",
+						"scu-ctu1-mix1",
+						"scu-ctu0-mix0",
 						"scu-src9", "scu-src8",
 						"scu-src7", "scu-src6",
 						"scu-src5", "scu-src4",
@@ -776,6 +780,8 @@
 				<&mstp10_clks R8A7795_CLK_SCU_SRC5>, <&mstp10_clks R8A7795_CLK_SCU_SRC4>,
 				<&mstp10_clks R8A7795_CLK_SCU_SRC3>, <&mstp10_clks R8A7795_CLK_SCU_SRC2>,
 				<&mstp10_clks R8A7795_CLK_SCU_SRC1>, <&mstp10_clks R8A7795_CLK_SCU_SRC0>,
+				<&mstp10_clks R8A7795_CLK_SCU_CTU0_MIX0>, <&mstp10_clks R8A7795_CLK_SCU_CTU1_MIX1>,
+				<&mstp10_clks R8A7795_CLK_SCU_CTU0_MIX0>, <&mstp10_clks R8A7795_CLK_SCU_CTU1_MIX1>,
 				<&mstp10_clks R8A7795_CLK_SCU_DVC0>, <&mstp10_clks R8A7795_CLK_SCU_DVC1>,
 				<&audio_clk_a>, <&audio_clk_b>, <&audio_clk_c>, <&s0d4_clk>;
 			clock-names = "ssi-all",
@@ -783,6 +789,8 @@
 					"ssi.4", "ssi.3", "ssi.2", "ssi.1", "ssi.0",
 					"src.9", "src.8", "src.7", "src.6", "src.5",
 					"src.4", "src.3", "src.2", "src.1", "src.0",
+					"ctu.0", "ctu.1",
+					"mix.0", "mix.1",
 					"dvc.0", "dvc.1",
 					"clk_a", "clk_b", "clk_c", "clk_i";
 			power-domains = <&cpg_clocks>;
@@ -797,6 +805,22 @@
 					dmas = <&audma0 0xbe>;
 					dma-names = "tx";
 				};
+			};
+
+			rcar_sound,mix {
+				mix0: mix@0 { };
+				mix1: mix@1 { };
+			};
+
+			rcar_sound,ctu {
+				ctu00: ctu@0 { };
+				ctu01: ctu@1 { };
+				ctu02: ctu@2 { };
+				ctu03: ctu@3 { };
+				ctu10: ctu@4 { };
+				ctu11: ctu@5 { };
+				ctu12: ctu@6 { };
+				ctu13: ctu@7 { };
 			};
 
 			rcar_sound,src {
